# minecraft-farm-game

./: .gitignore  CMakeLists.txt
include/: autosave_manager.hpp  const.hpp  enum_utils.hpp  farm_world.hpp  field.hpp  game.hpp  game_assets.hpp  inventory_manager.hpp  map_loader.hpp  save_manager.hpp
maps/: default_map.txt
src/: CMakeLists.txt  autosave_manager.cpp  farm_world.cpp  field.cpp  game.cpp  game_assets.cpp  inventory_manager.cpp  main.cpp  map_loader.cpp  save_manager.cpp
